    forever to load
  - moving between two adjacent triggers now activates the new one
    (this may be a regression from when I fixed the trigger detection
    to be pixel-perfect)
  - added IsLayerReflective and SetLayerReflective (Brian Robb)
  - fix GetCurrentMap() in map entry scripts
  - don't crash when loading a corrupt spriteset
  - added file_object.flush()

2003.01.29
  - make ExecuteGame work no matter where the game calling it is
    located on the filesystem
  - fix bug where OpenRawFile('blah', true) wouldn't actually create
    the file
  - Added new functions to joysticks.js system script and improved old
    functions' robustness (Brian Robb)

2003.01.28
  - added Flik's joysticks.js system script
  - fixed the "person doesn't exist inside of 'on create' script" bug

2003.01.25
  - upgraded JS engine to 1.5 RC 5, which should improve framerates
    and fix a few crashes.
  - improved GetGameList() so that it returns author and description
    information as well
  - the Game Settings dialog box now has author and description
    information
  - you no longer need to explicitly set the game script.  The first
    script added to the project is automatically set as the game script.

2003.01.24
  - added AreZonesAt, ExecuteZones, ExecuteZoneScript, GetZoneX/Y,
    GetZoneWidth/Height, GetNumZones (Brian Robb)
  - made the Run Sphere button in the editor work no matter what
    project is open.  now you can open a project file anywhere on your
    hard drive and run the game with the lightning bolt.

2003.01.23
  - added Get/SetTileDelay and Get/SetNextAnimatedTile (Brian Robb)

2003.01.22
  - various fixes to the new SCons build system
  - pruned source tree, getting rid of many obsolete directories and
    files
  - made build system convert text files from UNIX to DOS format when
    installing them
  - added an installer, which registers file types with Windows
    (double-clicking on packages, finally!)
  - updated icons to DRosen's new ones