@@ -135,8 +135,12 @@ BEGIN
     END
     POPUP "&Help"
     BEGIN
-        MENUITEM "&Contents",                   ID_HELP_CONTENTS
-        MENUITEM "&Tutorial",                   ID_HELP_TUTORIAL
+        MENUITEM "&Sphere Web Site",            ID_HELP_SPHERESITE
+        MENUITEM "&AegisKnight's Site",         ID_HELP_AEGISKNIGHTSSITE
+        MENUITEM "&Flik's Web Site",            ID_HELP_FLIKSSITE
+        MENUITEM SEPARATOR
+        MENUITEM "Local &Documentation",        ID_HELP_LOCALDOCUMENTATION
+        MENUITEM SEPARATOR
         MENUITEM "&About...",                   ID_HELP_ABOUT
     END
 END
